# www.sussurros.tk

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  REAME.md  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: django.yml
config/: settings.py  urls.py
gramaverde/core/: apps.py  views.py
gramaverde/core/tests/: test_urls.py  test_views.py
templates/templates/: base.html
templates/templates/pages/: index.html
