[tool.poetry]
name = "gramaverde"
version = "0.1.0"
description = "News portal about the world of comics, manga, anime and everything else"
authors = ["Danilo Marto de Carvalho <dmcarvalho@tutamail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
