[tool.poetry]
name = "gramaverde"
version = "0.1.0"
description = "News portal about the world of comics, manga, anime and everything else"
authors = ["Danilo Marto de Carvalho <dmcarvalho@tutamail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
django = "^4.1.5"
python-decouple = "^3.6"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
